feat: mejoras destacadas para defensa del TP
Agrega diagramas UML, Spring REST Docs, historial de stock, alertas de stock bajo, bloqueo optimista, ganancias enriquecidas e integracion Venta+Stock. Actualiza README con compatibilidad, detalles y verificacion manual. 28 tests pasando.